--- a/index.html
+++ b/index.html
@@ -171,19 +171,9 @@
             <div class="row">
                 <div class=" col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="home-slider">
-                        <img src="image/AyanShafag-1.jpg" alt="">
-                        <img src="image/AyanShafag-2.jpg" alt="">
-                        <img src="image/AyanShafag-3.jpg" alt="">
-                        <img src="image/AyanShafag-4.jpg" alt="">
-                        <img src="image/AyanShafag-5.jpg" alt="">
-                        <img src="image/AyanShafag-6.jpg" alt="">
-                        <img src="image/AyanShafag-7.jpg" alt="">
-                        <img src="image/AyanShafag-8.jpg" alt="">
-                        <img src="image/AyanShafag-9.jpg" alt="">
-                        <img src="image/AyanShafag-10.jpg" alt="">
-                        <img src="image/AyanShafag-11.jpg" alt="">
-                        <img src="image/AyanShafag-12.jpg" alt="">
                         <img src="image/AyanShafag-13.jpg" alt="">
+                        <img src="image/AyanShafag-11.jpg" alt="">
+                        <img src="image/AyanShafag-9.jpg" alt="">
                         <img src="image/AyanShafag-14.jpg" alt="">
                     </div>
                 </div>
@@ -230,8 +220,8 @@
                 </div>
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                     <div class="about-img">
-                        <img class="main-img" src="image/Ayan Shafag on Instagram_ _Sabahiniz xeyr qizlar-- Gununuz xosh _ ve ugurlu kecsin-- Men ise gedim gozel gelinlerimi beziyim--Her birine xoshbextlik arzu edirem--‍♀️___B9qSqeog5zn_1(JPG).jpg" alt="">
-                        <img class="hover-img" src="image/Ayan Shafag on Instagram_ _Sabahiniz xeyr qizlar-- Gununuz xosh _ ve ugurlu kecsin-- Men ise gedim gozel gelinlerimi beziyim--Her birine xoshbextlik arzu edirem--‍♀️___B9qSqeog5zn_0(JPG).jpg" alt="">
+                        <img class="main-img" src="image/AyanShafag-10.jpg" alt="">
+                        <img class="hover-img" src="image/AyanShafag-11.jpg" alt="">
                     </div>
                 </div>
 
@@ -253,7 +243,7 @@
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="service-item service-item-1">
                         <div class="service-img">
-                            <img src="image/Ayan Shafag on Instagram_ _Salam qızlar_-- ne gozel şekildir bu bele_ Ureyim getdi_ Çox sağolun Ali _aliyusub.photo _kharibabdullayev Qarib bey ellerinize sağlıq--___CESGUvsDZDc(JPG).jpg" alt="">
+                            <img src="image/AyanShafag-13.jpg" alt="">
                         </div>
                         <div class="service-text">
                             <span>Make Up</span>
@@ -263,7 +253,7 @@
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="service-item">
                         <div class="service-img">
-                            <img src="image/Ayan Shafag on Instagram_ _Good evening friends _ From me_ _ayanshafag Ayashka_ you probably recognized this make up of mine _ you loved it so much that I decided to___CFPaKRPDeF4(JPG).jpg" alt="">
+                            <img src="image/AyanShafag-2.jpg" alt="">
                         </div>
                         <div class="service-text">
                             <span>Hair Style</span>
@@ -317,51 +307,49 @@
                 </div>
                 <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <div id="photos">
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _----------  Photo by _aliyusub.photo  All the products ---- 1)      Scrub_ HudaBeauty Wishful Yo Glow Enzyme Scrub  _wishfulskin  2)___CFXZo_ijZN0(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _----------  Photo by _aliyusub.photo  All the products ---- 1)      Scrub_ HudaBeauty Wishful Yo Glow Enzyme Scrub  _wishfulskin  2)___CFXZo_ijZN0(JPG).jpg" alt="">
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-1.jpg">
+                            <img src="image/AyanShafag-1.jpg" alt="">
                         </a>
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _Good evening friends _ From me_ _ayanshafag Ayashka_ you probably recognized this make up of mine _ you loved it so much that I decided to___CFPaKRPDeF4(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _Good evening friends _ From me_ _ayanshafag Ayashka_ you probably recognized this make up of mine _ you loved it so much that I decided to___CFPaKRPDeF4(JPG).jpg" alt="">
-                        </a>               
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _Good evening friends _ From me_ _ayanshafag Ayashka_ you probably recognized this make up of mine _ you loved it so much that I decided to___CFPaSAaDcD6(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _Good evening friends _ From me_ _ayanshafag Ayashka_ you probably recognized this make up of mine _ you loved it so much that I decided to___CFPaSAaDcD6(JPG).jpg" alt="">
-                        </a>         
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _Good evening friends _ From me_ _ayanshafag Ayashka_ you probably recognized this make up of mine _ you loved it so much that I decided to___CFPaW0ajWCj(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _Good evening friends _ From me_ _ayanshafag Ayashka_ you probably recognized this make up of mine _ you loved it so much that I decided to___CFPaW0ajWCj(JPG).jpg" alt="">
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-2.jpg">
+                            <img src="image/AyanShafag-2.jpg" alt="">
                         </a>
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _Good evening friends _ From me_ _ayanshafag Ayashka_ you probably recognized this make up of mine _ you loved it so much that I decided to___CFPZ78gjo2E(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _Good evening friends _ From me_ _ayanshafag Ayashka_ you probably recognized this make up of mine _ you loved it so much that I decided to___CFPZ78gjo2E(JPG).jpg" alt="">
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-3.jpg">
+                            <img src="image/AyanShafag-3.jpg" alt="">
                         </a>
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _Hi dear friends_ I wanna talk about the newly launched melted shadows by HudaBeauty today -- Just look at that Matta_Metal Melted EyeShadow___B8bddcnAcF9(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _Hi dear friends_ I wanna talk about the newly launched melted shadows by HudaBeauty today -- Just look at that Matta_Metal Melted EyeShadow___B8bddcnAcF9(JPG).jpg" alt="">
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-4.jpg">
+                            <img src="image/AyanShafag-4.jpg" alt="">
                         </a>
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _Menim Gozel Anamin_ Menim Ad Gunume Yazdiqi Deyerli_ Mene Eziz Olan sozleri_ Sen Menim Dunyamsan_ Anamsan_------  _Repost _shafaqnovruz___CDB5JW_jkeH(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _Menim Gozel Anamin_ Menim Ad Gunume Yazdiqi Deyerli_ Mene Eziz Olan sozleri_ Sen Menim Dunyamsan_ Anamsan_------  _Repost _shafaqnovruz___CDB5JW_jkeH(JPG).jpg" alt="">
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-5.jpg">
+                            <img src="image/AyanShafag-5.jpg" alt="">
                         </a>
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _Photo by _aliyusub.photo --------  All the products ---- 1)      Scrub_ HudaBeauty Wishful Yo Glow Enzyme Scrub  _wishfulskin  2)___CFXZ1tNj(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _Photo by _aliyusub.photo --------  All the products ---- 1)      Scrub_ HudaBeauty Wishful Yo Glow Enzyme Scrub  _wishfulskin  2)___CFXZ1tNj(JPG).jpg" alt="">
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-6.jpg">
+                            <img src="image/AyanShafag-6.jpg" alt="">
                         </a>
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _Photo by _aliyusub.photo --------  All the products ---- 1)      Scrub_ HudaBeauty Wishful Yo Glow Enzyme Scrub  _wishfulskin  2)___CFXZ1tNj(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _Photo by _aliyusub.photo --------  All the products ---- 1)      Scrub_ HudaBeauty Wishful Yo Glow Enzyme Scrub  _wishfulskin  2)___CFXZ1tNj(JPG).jpg" alt="">
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-7.jpg">
+                            <img src="image/AyanShafag-7.jpg" alt="">
                         </a>
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _Sabahiniz xeyr qizlar-- Gununuz xosh _ ve ugurlu kecsin-- Men ise gedim gozel gelinlerimi beziyim--Her birine xoshbextlik arzu edirem--‍♀️___B9qSqeog5zn_0(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _Sabahiniz xeyr qizlar-- Gununuz xosh _ ve ugurlu kecsin-- Men ise gedim gozel gelinlerimi beziyim--Her birine xoshbextlik arzu edirem--‍♀️___B9qSqeog5zn_0(JPG).jpg" alt="">
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-8.jpg">
+                            <img src="image/AyanShafag-8.jpg" alt="">
                         </a>
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _Sabahiniz xeyr qizlar-- Gununuz xosh _ ve ugurlu kecsin-- Men ise gedim gozel gelinlerimi beziyim--Her birine xoshbextlik arzu edirem--‍♀️___B9qSqeog5zn_1(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _Sabahiniz xeyr qizlar-- Gununuz xosh _ ve ugurlu kecsin-- Men ise gedim gozel gelinlerimi beziyim--Her birine xoshbextlik arzu edirem--‍♀️___B9qSqeog5zn_1(JPG).jpg" alt="">
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-9.jpg">
+                            <img src="image/AyanShafag-9.jpg" alt="">
                         </a>
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _Salam qızlar_ _ayanshafag Bu gün qaşlarla makiyaj etmək qərarına gəldim və bunu edərkən çox əyləndim. Məncə olduqca _cool_ alındı. Bu___CBTeCopDDhE_0(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _Salam qızlar_ _ayanshafag Bu gün qaşlarla makiyaj etmək qərarına gəldim və bunu edərkən çox əyləndim. Məncə olduqca _cool_ alındı. Bu___CBTeCopDDhE_0(JPG).jpg" alt="">
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-10.jpg">
+                            <img src="image/AyanShafag-10.jpg" alt="">
                         </a>
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _Salam qızlar_ _ayanshafag Bu gün qaşlarla makiyaj etmək qərarına gəldim və bunu edərkən çox əyləndim. Məncə olduqca _cool_ alındı. Bu___CBTeCopDDhE_1(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _Salam qızlar_ _ayanshafag Bu gün qaşlarla makiyaj etmək qərarına gəldim və bunu edərkən çox əyləndim. Məncə olduqca _cool_ alındı. Bu___CBTeCopDDhE_1(JPG).jpg" alt="">
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-11.jpg">
+                            <img src="image/AyanShafag-11.jpg" alt="">
                         </a>
-                        <a data-gall="myImages" class="venobox" href="image/Ayan Shafag on Instagram_ _Salam qızlar_-- ne gozel şekildir bu bele_ Ureyim getdi_ Çox sağolun Ali _aliyusub.photo _kharibabdullayev Qarib bey ellerinize sağlıq--___CESGUvsDZDc(JPG).jpg">
-                            <img src="image/Ayan Shafag on Instagram_ _Salam qızlar_-- ne gozel şekildir bu bele_ Ureyim getdi_ Çox sağolun Ali _aliyusub.photo _kharibabdullayev Qarib bey ellerinize sağlıq--___CESGUvsDZDc(JPG).jpg" alt="">
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-12.jpg">
+                            <img src="image/AyanShafag-12.jpg" alt="">
                         </a>
-                        <a data-gall="myImages" class="venobox" href="image/WhatsApp Image 2020-09-22 at 10.34.36 PM.jpeg">
-                            <img src="image/WhatsApp Image 2020-09-22 at 10.34.36 PM.jpeg" alt="">
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-13.jpg">
+                            <img src="image/AyanShafag-13.jpg" alt="">
                         </a>
+                        <a data-gall="myImages" class="venobox" href="image/AyanShafag-14.jpg">
+                            <img src="image/AyanShafag-14.jpg" alt="">
+                        </a>
+
                     </div>
                     <div class="load-more">
                         <button>load more</button>
